Fix body vertical overflow on narrow viewports

--- a/style.css
+++ b/style.css
@@ -55,10 +55,15 @@ figcaption {
 
 /* center main content vertically */
 body {
-    height: 100vh;
-    height: 100dvh;
-    display: grid;
-    grid-template-rows: 1fr auto 1fr;
+    min-height: 100vh;
+    min-height: 100dvh;
+    display: flex;
+    flex-direction: column;
+}
+
+header, footer {
+    flex-grow: 1;
+    flex-basis: 0;
 }
 /* --------------------- */
 
